k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: quickfood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend-pod
      namespace: quickfood
      labels: 
        app: frontend
    spec:
      containers:
      - name: quickfood-frontend
        image: quickfood-client:envfix
        imagePullPolicy: Never
        ports:
        - containerPort: 80
