k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: quickfood
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - name: http
    port: 6001
    targetPort: 6001
    nodePort: 30081
