k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: quickfood
spec:
  selector:
    app: mongodb
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
